--- a/src/assets/css/dashboard.css
+++ b/src/assets/css/dashboard.css
@@ -574,6 +574,22 @@ input:-internal-autofill-selected {
 }
 
 
+::-webkit-scrollbar-track {
+
+    background-color: #e7e3e3;
+}
+
+::-webkit-scrollbar {
+    width: 0px;
+    height: 7px;
+    background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: transparent;
+
+}
+
 
 /* login Page */
 .login-wrapper {
