--- a/src/assets/css/dashboard.css
+++ b/src/assets/css/dashboard.css
@@ -922,6 +922,12 @@ input:-internal-autofill-selected {
     font-size: 16px;
 }
 
+.p-datatable .p-datatable-tbody>tr>td {
+
+    font-family: Inter-Regular;
+    font-size: 12px;
+}
+
 .db-card h1 {
     font-size: 42px;
     font-family: Inter-SemiBold;
