--- a/src/assets/css/dashboard.css
+++ b/src/assets/css/dashboard.css
@@ -922,6 +922,13 @@ input:-internal-autofill-selected {
     font-size: 16px;
 }
 
+.diaHead {
+    font-family: Inter-Medium;
+    font-size: 14px;
+    padding: 5px;
+    line-height: 1.5;
+}
+
 .p-menu .p-menuitem-link {
     padding: 0.75rem 1rem !important;
 
