--- a/src/assets/css/dashboard.css
+++ b/src/assets/css/dashboard.css
@@ -774,6 +774,12 @@ input:-internal-autofill-selected {
     cursor: pointer;
 }
 
+.custom-message {
+    font-family: Inter-Regular;
+    font-size: 1rem;
+    padding-left: 5px;
+}
+
 .editSize1 {
     width: 21px;
     height: 21px;
@@ -1024,6 +1030,7 @@ input:-internal-autofill-selected {
     font-size: 14px;
     padding: 5px;
     line-height: 1.5;
+    margin-bottom: 2px !important;
 }
 
 .p-menu .p-menuitem-link {
